--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pollería - Gestión de Pedidos</title>
+  <title>Connectify- Gestión de Pedidos</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <header>
     <img src="imagenes/pollo-asado.png" alt="Logo de la Pollería" class="logo">
-    <h1>La Pollería - Gestión de Pedidos</h1>
+    <h1>Connectify- - Gestión de Pedidos</h1>
   </header>
 
   <div class="contenedor">
@@ -21,21 +21,11 @@
       <label for="direccion">Dirección:</label>
       <input type="text" id="direccion" placeholder="Ej: Calle 123, Lima" required>
 
-      <label for="pago">Método de Pago:</label>
-      <select id="pago" required>
-        <option value="Yape">Yape</option>
-        <option value="Plin">Plin</option>
-        <option value="Tarjeta de Crédito">Tarjeta de Crédito</option>
-      </select>
-
       <label for="items">Items:</label>
       <input type="text" id="items" placeholder="Ej: Pollo, Papas Fritas" required>
 
       <label for="cantidad">Cantidad:</label>
       <input type="number" id="cantidad" min="1" value="1" required>
-
-      <label for="importe">Importe Unitario:</label>
-      <input type="number" id="importe" step="0.01" placeholder="Ej: 10.50" required>
 
       <button type="submit">Agregar Pedido</button>
     </form>
