--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Connectify- Gestión de Pedidos</title>
+  <title>Connectify Gestión de Pedidos</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
   </div>
 
   <footer>
-    <p>© 2024 La Pollería. Todos los derechos reservados.</p>
+    <p>© 2024 Connectify. Todos los derechos reservados.</p>
   </footer>
 
   <script src="app.js"></script>
